--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "eslint-config-next": "12.3.1",
     "postcss": "^8.4.17",
     "tailwindcss": "^3.1.8"
+  },
+  "engines": {
+    "node": "22.x"
   }
 }
