--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "date-fns": "^3.3.1",
     "gray-matter": "^4.0.3",
+    "lucide-react": "^0.476.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
